# spendSense

./: .coverage  .dockerignore  .gitignore  .railwayignore  .vercelignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CLOUD_DEPLOYMENT_PLAN.md  COMPREHENSIVE_SPEC_AUDIT.md  DEPLOYMENT.md  Dockerfile  LICENSE  MCP_AGENT_MAIL_SETUP.md  Procfile  QUICK_DEPLOY.md  RAILWAY_DEPLOY_STEPS.md  README.md  REFLEX_MIGRATION_STATUS.md  coverage.json  deploy_operator.sh  nixpacks.toml  pyproject.toml  railway.json  railway.operator.json  regenerate_with_preset.py  render.yaml  requirements.txt  start.sh  start_operator.sh  test_image_api.py  test_sora_integration.py  vercel.json
.nicegui/: storage-user-87aa6d3f-47dc-4071-8aca-c2e027632d25.json  storage-user-ba55b517-78dc-4d02-91b7-58ad934d844f.json  storage-user-bb91072e-d217-41bc-afd2-570800c8e324.json  storage-user-bfb986dd-79d9-46fe-ba54-b38e1395368a.json  storage-user-ec0cb54b-d755-44d0-8f56-4627eb5b2fad.json  storage-user-fe0238b0-80f3-4938-9e28-5b24895d0e7a.json
api/: main.py  models.py
backend/: __init__.py  data_loaders.py
data/: config.json
docs/: FAIRNESS_METHODOLOGY.md  NICEGUI_OPERATOR_DASHBOARD.md  PERSONA_QUICK_REFERENCE.txt  PERSONA_SYSTEM_ANALYSIS.md  README.md  REVENUE_ANALYSIS_SUMMARY.md  RUNNING_THE_APP.md  SUBMISSION_PACKAGE.md  SpendSense MVP V2.md  SpendSense_Evaluation_PEAK6_Branded.pptx  SpendSense_Evaluation_PEAK6_Extended.pptx  TECHNICAL_WRITEUP.md  ai_recommendations.md  data_generator_operator_guide.md  decision_log.md  design_philosophy_systematic_precision.md  eval_summary.md  fairness_report.md  (+16 more)
(+418 files in other folders)
